src/test/ui/feature-gates/feature-gate-crate_visibility_modifier.stderr
error[E0658]: `crate` visibility modifier is experimental
  --> $DIR/feature-gate-crate_visibility_modifier.rs:1:1
   |
LL | crate struct Bender {
   | ^^^^^
   |
   = note: see issue #53120 <https://github.com/dust-lang/dust/issues/53120> for more information
   = help: add `#![feature(crate_visibility_modifier)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `dustc --explain E0658`.
